# UsersApi

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f9646ba23a8c_create_users_table.py
apps/core/: config.py  database.py  dependencies.py
apps/users/: models.py  routers.py  schemas.py  services.py
