[tool.poetry]
name = "usersapi"
version = "0.1.0"
description = ""
authors = ["mist258 <natalia.kolchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
alembic = "^1.18.2"
sqlalchemy = "^2.0.46"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
